--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lydia-st.gitlab.io",
+  "name": "taylor-st.gitlab.io",
   "version": "0.0.1",
   "description": "My personal website",
   "private": true,
@@ -8,7 +8,7 @@
     "website"
   ],
   "license": "MIT",
-  "author": "Lydia",
+  "author": "Taylor",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.config.dev.js",
